<resources>
    <string name="app_name">AMTS E-PASS</string>
    <string name="AMTS_EPASS">AMTS E-PASS </string>
    <string name="login_with_email">LOGIN WITH EMAIL</string>
    <string name="creat_a_new_account">Create a new account</string>
    <string name="register">Register</string>
    <string name="an_e_pass_service_from_us"><font color='#6200EE'>An <b>e-Pass</b> Service from Us</font></string>
    <string name="htmlFormattedText">
        <font color='#757272'>  By proceeding , you agree to our</font> <font color='#6200EE'><b>Terms and Condition</b></font> <font color='#757272'>and </font><font color='#6200EE'><b>Privacy policy</b></font>
    </string>
    <string name="todo" />
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="student">Student</string>
    <string name="amts_manager">Amts Manager</string>
    <string name="collage_authority">Collage Authority</string>
    <string name="Login"> Login</string>
    <string name="email">Enter Email id</string>
    <string name="Password">Enter Password</string>
    <string name="login">Login</string>
    <string name="studentName">Enter your Name</string>
    <string name="Collage">Enter Collage Name</string>
    <string name="Select_BirthDate">Select Birth Date</string>
    <string name="Register">Register</string>
    <string name="ReenterPassword">Reenter Password</string>
    <string name="studentLogin">Student Login</string>
    <string name="GeneratePassRequest">Generate Pass Request</string>
    <string name="Payment">Payment</string>
    <string name="cancel">Cancel</string>
    <string name="mobileno">Enter Mobile No</string>
    <string name="select_Gender">Select Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="select_Category">Select Category</string>
    <string name="email_error1">Enter Correct Email</string>
    <string name="select_Source">Select Source Station</string>
    <string name="select_Destination">Select Destination Area</string>
    <string name="choose_end_date">Choose End Date</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="student_pass_request">Student Pass Request</string>
    <string name="enter_collage_name">Enter Collage Name</string>
    <string name="enter_department_name">Enter Department Name</string>
    <string name="enter_enrollment_no">Enter Enrollment No</string>
    <string name="choose_year">Choose Year</string>
    <string name="Confirm">Confirm</string>
    <string name="already_member_login">Already Member!! LOGIN</string>
    <string name="no_account_yet_create_one">No Account Yet??? Create One</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="senior_citizen_pass_request">Senior Citizen Pass Request</string>
    <string name="employee_pass_request">Employee Pass Request</string>
    <string name="amts_manager_">AMTS Manager</string>
    <string name="next">Next</string>
    <string name="select_collage">Select Your Collage</string>
    <string name="source_destination_not_same">Souce and Destination can\'t be same.</string>
    <string name="start_date_and_end_date_can_not_be_same">Start Date and End Date can not be same</string>
    <string name="choose_language">Choose Language</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="Mobileno">Mobile No</string>
    <string name="CollageName">Collage Name</string>
    <string name="department">Department</string>
    <string name="Year">Year</string>
    <string name="Enrollment_No">Enrollment No</string>
    <string name="enter_job_profile">Enter Job Profile</string>
    <string name="enter_job_address">Enter Job Address</string>
    <string name="Senior_Citizen_pass_request">Senior Citizen Pass Request</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="Enddate">End Date</string>
    <string name="Startdate">Start Date</string>
    <string name="JobProfile">Job Profile</string>
    <string name="JobAddress">Job Address</string>
    <string name="admin">Admin</string>
    <string name="Employee">Employee</string>
    <string name="senior_citizen">Senior Citizen</string>
    <string name="Change_Lauguage">Change Languages</string>
    <string name="user">User</string>
    <string name="collage">College Authority</string>
    <string name="validName">Please Enter Valid Name</string>
    <string name="enter_correct_pswd">Enter correct password</string>
    <string name="Password_length_must_be_8">Password Length must be more than 8 digit</string>
    <string name="click_here_to_select_image_from_gallery">CHOOSE YOUR AADHAR CARD</string>
    <string name="click_here_to_upload_selected_image_on_server">UPLOAD YOUR AADHAR CARD</string>
    <string name="enter_aadhard_card_number">Enter Aadhard card Number</string>
    <string name="registration">Registration</string>
    <string name="Update_Profile">Update Profile</string>
    <string name="pass_request">PassRequest</string>
    <string name="home">Home</string>
    <string-array name="category_array">
        <item>Student</item>
        <item>Senior Citizen</item>
        <item>Employee</item>
        <item>College Authority</item>
        <item>AMTS Manager</item>
    </string-array>
    <string-array name="year_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="Category">Category</string>
    <string name="Birthdate">Birthdate</string>
    <string name="passStatus">Pass Status</string>
    <string name="Gender">Gender</string>
</resources>