<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group >

        <item
            android:id="@+id/mMyAccount"
            android:title="@string/home"
            android:icon="@drawable/ic_menu_home"
       />

        <item
            android:id="@+id/mPassRequest"
            android:title="@string/pass_request"
            android:icon="@drawable/ic_menu_add_event"
            />


        <item
            android:id="@+id/mPassStatus"
            android:title="@string/passStatus"
            android:icon="@drawable/ic_baseline_batch_prediction_24"
            />

        <item
            android:id="@+id/mSettings"
            android:title="@string/settings"
            android:icon="@drawable/ic_menu_settings"
            />
        <item
            android:id="@+id/mLogout"
            android:title="@string/logout"
            android:icon="@drawable/ic_menu_signout"/>
       </group>
</menu>