<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.Student_PASS_Request">
<View
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:id="@+id/bg_top_header"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/ic_bg_topheader"/>

<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/student_pass_request"
            android:id="@+id/tvStudentPassRequest"
            android:textAlignment="center"
            android:textSize="30sp"/>
<!--

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/select_Category"
            android:id="@+id/sCategory"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
-->

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/select_collage"
            android:textSize="18sp"
            android:id="@+id/tvCollage"/>

        <Spinner
            android:id="@+id/spinneCollage"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_background"/>
        <EditText
            style="@style/EditTextTheme"
            android:hint="@string/enter_department_name"
            android:id="@+id/etDepartment"
            android:inputType="text"/>

        <EditText
            style="@style/EditTextTheme"
            android:hint="@string/enter_enrollment_no"
            android:id="@+id/etEnNo"
            android:inputType="number"/>

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/choose_year"
            android:textSize="18sp"
            android:id="@+id/tvYear"/>

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_background"/>



        <TextView
            style="@style/TextViewTheme"
            android:text="@string/select_Source"
            android:id="@+id/sSource"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spinnerSource"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_background"/>
        <TextView
            style="@style/TextViewTheme"
            android:text="@string/select_Destination"
            android:id="@+id/sDestination"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spinnerDestination"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="10dp"/>

        <EditText
            style="@style/EditTextTheme"
            android:hint="@string/choose_start_date"
            android:id="@+id/etStartDate"/>

        <EditText
            style="@style/EditTextTheme"
            android:hint="@string/choose_end_date"
            android:id="@+id/etEndDate"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPassRequest"
            style="@style/ButtonTheme"
            android:layout_weight="1"
            android:text="@string/Confirm"/>

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonTheme"
            android:text="@string/cancel"
            android:layout_weight="1"/>
    </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>